--- a/计算机及日常英语/计算机英语小记.md
+++ b/计算机及日常英语/计算机英语小记.md
@@ -3,6 +3,8 @@
 ## b
 1. ==backend==    后端;后台;后段;编译器后端; 
 
+# c
+1. ==category==  n. 类型，部门，种类，类别
 # r
 1. ==reactive== 反应的；电抗的；反动的 
 > ``Reactive streams``  反应流；**Reactive Streams是一种基于异步流处理的标准化规范，旨在使流处理更加可靠、高效和响应式。**
